--- a/restaurant/src/Components/Header/Header.css
+++ b/restaurant/src/Components/Header/Header.css
@@ -33,3 +33,22 @@
 
     font-size: 30px;
 }
+
+.mobile-navbar {
+
+    display: none;
+}
+
+@media screen and (max-width : 992px) {
+    
+    .mobile-navbar {
+
+        display: block;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px;
+        width: 100%;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    }
+}
